--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -7,25 +7,26 @@
 </head>
 <body>
   <header class="site-header">
-   <div class="container">
-    <a href="/" class="logo">
-      <img src="/images/logo.png" alt="Labmyst Logo" height="50" />
-    </a>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <div class="dropdown">
-          <a href="/products" class=" dropbtn">Products ▾</a>
-          <div class="dropdown-content">
-          <a href="/products/analytical">Analytical Instruments</a>
-          <a href="/products/general">General Lab Equipment</a>
-          <a href="/products/medical">Medical & Clinical Devices</a>
-          <a href="/products#custom">Custom Solutions</a>
-        </div>
-        </div>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/explore">Explore</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <a href="/" class="logo">
+        <img src="/images/logo.png" alt="Labmyst Logo" height="50" />
+      </a>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li class="dropdown">
+            <a href="/products" class="dropbtn">Products ▾</a>
+            <div class="dropdown-content">
+              <a href="/products/analytical">Analytical Instruments</a>
+              <a href="/products/general">General Lab Equipment</a>
+              <a href="/products/medical">Medical & Clinical Devices</a>
+              <a href="/products#custom">Custom Solutions</a>
+            </div>
+          </li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/explore">Explore</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
