--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,8 +1,11 @@
 <%- include('partials/headers') %>
 
 <section class="not-found">
-  <h1>404 - Page Not Found</h1>
-  <p>The page you’re looking for doesn’t exist. Return to <a href="/">home</a>.</p>
+  <div class="container">
+    <h1>404 - Page Not Found</h1>
+    <p>The page you’re looking for doesn’t exist or has been moved.</p>
+    <a href="/" class="btn">Go to Homepage</a>
+  </div>
 </section>
 
 <%- include('partials/footer') %>
