--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,11 +5,22 @@
   <p>We're here to help. Reach out for product inquiries, custom solutions, or distributor partnerships.</p>
 
   <form action="/send-message" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required><br>
-    <input type="email" name="email" placeholder="Your Email" required><br>
-    <textarea name="message" placeholder="Your Message" required></textarea><br>
-    <button type="submit">Send Message</button>
-  </form>
+  <label for="name">Name</label><br>
+  <input type="text" id="name" name="name" placeholder="Your Name" required><br>
+
+  <label for="email">Email</label><br>
+  <input type="email" id="email" name="email" placeholder="Your Email" required><br>
+
+  <label for="message">Message</label><br>
+  <textarea id="message" name="message" placeholder="Your Message" required></textarea><br>
+
+  <button type="submit">Send Message</button>
+</form>
+
+<% if (typeof message !== 'undefined') { %>
+  <p class="form-feedback"><%= message %></p>
+<% } %>
+
 </section>
 
 <%- include('partials/footer') %>
