--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -8,6 +8,7 @@
         <img src="<%= product.image %>" alt="<%= product.name %>" />
         <h3><%= product.name %></h3>
         <p><%= product.description %></p>
+        <a href="/products/<%= product.slug %>" class="btn">View Details</a>
       </div>
     <% }) %>
   </div>
